--- a/index.html
+++ b/index.html
@@ -72,7 +72,55 @@
                                                     Main.
             ===================================================================================
         -->
-        <main></main>
+        <main class="flex justify-center">
+
+
+            <!-- Phone -->
+            <div class="mockup-phone">
+                <div class="camera"></div>
+                <div class="display">
+                    <div class="artboard artboard-demo w-auto lg:w-[28.125rem] h-auto lg:h-[58.25rem] py-36 lg:py-0">
+
+                        <div class="flex justify-center flex-col">
+
+                            <div class="flex justify-center px-16">
+                                <img src="media/images/full_logo.png" alt="Payoo logo">
+                            </div>
+
+                            <div class="hero-content flex-col lg:flex-row-reverse">
+                                <div class="card bg-base-100 w-full shrink-0 shadow-2xl">
+                                    <form class="card-body p-3 md:p-4 lg:p-[2rem]">
+                                        <div class="form-control">
+                                            <label class="label">
+                                                <span class="label-text">Mobile Number</span>
+                                            </label>
+                                            <input type="text" placeholder="Enter your number"
+                                                class="input input-bordered" required />
+                                        </div>
+                                        <div class="form-control">
+                                            <label class="label">
+                                                <span class="label-text">4 Digit Pin</span>
+                                            </label>
+                                            <input type="number" placeholder="Enter 4 Digit Pin"
+                                                class="input input-bordered" required />
+                                            <label class="label">
+                                            </label>
+                                        </div>
+                                        <div class="form-control mt-6">
+                                            <button class="btn btn-primary">Login</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </main>
 
 
 
