Design revise and set payoo logo title

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
 
                         <div class="flex justify-center flex-col">
 
+                            <!-- Payoo logo. -->
                             <div class="flex justify-center px-16">
-                                <img src="media/images/full_logo.png" alt="Payoo logo">
+                                <img src="media/images/full_logo.png" alt="Payoo logo" title="Payoo logos">
                             </div>
 
+                            <!-- Payoo input. -->
                             <div class="hero-content flex-col lg:flex-row-reverse">
                                 <div class="card bg-base-100 w-full shrink-0 shadow-2xl">
                                     <form class="card-body p-8 md:p-4 lg:p-[2rem]">
