--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                                                 <span class="label-text font-medium text-base text-heading">Mobile Number</span>
                                             </label>
                                             <input type="text" placeholder="Enter your number"
-                                                class="input input-bordered rounded-[2rem] px-5 py-4" required />
+                                                class="input input-bordered rounded-[2rem] px-5 py-4 bg-input_field border-none" required />
                                         </div>
                                         <div class="form-control">
                                             <label class="label">
                                                 <span class="label-text font-medium text-base text-heading">4 Digit Pin</span>
                                             </label>
                                             <input type="number" placeholder="Enter 4 Digit Pin"
-                                                class="input input-bordered rounded-[2rem] px-5 py-4" required />
+                                                class="input input-bordered rounded-[2rem] px-5 py-4 bg-input_field border-none" required />
                                             <label class="label">
                                             </label>
                                         </div>
