--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                             <label class="label">
                                                 <span class="label-text font-medium text-base text-heading">4 Digit Pin</span>
                                             </label>
-                                            <input type="number" placeholder="Enter 4 Digit Pin"
+                                            <input id="pin_number_field" type="number" placeholder="Enter 4 Digit Pin"
                                                 class="input input-bordered rounded-[2rem] px-5 py-4 bg-input_field border-none" required />
                                             <label class="label">
                                             </label>
