Set autocomplete off in number input tag

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                             <label class="label">
                                                 <span class="label-text font-medium text-base text-heading">Mobile Number</span>
                                             </label>
-                                            <input id="mobile_number_field" type="text" placeholder="Enter your number"
+                                            <input id="mobile_number_field" type="text" autocomplete="off" placeholder="Enter your number"
                                                 class="input input-bordered rounded-[2rem] px-5 py-4 bg-input_field border-none" required />
                                         </div>
 
