form box shadow removed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                             <!-- Payoo input. -->
                             <div class="hero-content flex-col lg:flex-row-reverse">
-                                <div class="card bg-base-100 w-full shrink-0 shadow-2xl">
+                                <div class="card bg-base-100 w-full shrink-0">
 
                                     <form class="card-body p-8 md:p-4 lg:p-[2rem]">
 
