remove shadow and chaged bg color in login page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="camera"></div>
                     <div class="display">
                         <div
-                            class="artboard artboard-demo w-auto lg:w-[28.125rem] h-auto lg:h-[58.25rem] py-36 lg:py-0 relative">
+                            class="artboard artboard-demo w-auto lg:w-[28.125rem] h-auto lg:h-[58.25rem] py-36 lg:py-0 relative bg-login_bg shadow-none">
 
                             <!-- 
                                                 Phone icon section.
@@ -104,7 +104,7 @@
 
 
 
-                            
+
                             <!-- 
                                                     Payoo section.
                                 =====================================================
