Changed meta tags keywords, content in index and home page

--- a/home_page.html
+++ b/home_page.html
@@ -5,15 +5,15 @@
 
         <!-- Meta tags. -->
         <meta charset="UTF-8">
-        <meta name="description" content="This is a mobile financial service page">
+        <meta name="description" content="This is a mobile financial service home page">
         <meta name="keywords"
-            content="mobile finance service, mobile finance, finance service, service, finance, mobile">
+            content="mobile finance service, mobile finance, finance service, service, finance, mobile, home page, home, page">
         <meta name="author" content="Payoo">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Page title. -->
-        <title>Payoo MFS</title>
+        <title>Home page Payoo MFS</title>
 
         <!-- Page icon. -->
         <link rel="shortcut icon" href="media/images/payoo.png" type="image/x-icon">
