Balance and logout section responsive

--- a/home_page.html
+++ b/home_page.html
@@ -84,7 +84,7 @@
                     <div class="camera"></div>
                     <div class="display">
                         <div
-                            class="artboard w-auto lg:w-[28.125rem] h-auto lg:h-[58.25rem] py-36 lg:py-0 relative shadow-none bg-white">
+                            class="artboard w-auto lg:w-[28.125rem] h-auto lg:h-[58.25rem] pt-20 relative shadow-none bg-white">
 
 
                             <header>
@@ -114,7 +114,7 @@
                                                     Payoo section.
                                 =====================================================
                             -->
-                            <section class="flex justify-center flex-col pt-20 px-4 mb-10">
+                            <section class="flex justify-center flex-col px-4 pb-10 lg:pb-0 lg:mb-10">
 
                                 <!-- Payoo input. -->
                                 <div class="hero-content flex-col lg:flex-row-reverse">
@@ -131,7 +131,7 @@
                                                     <p class="text-heading/50 text-sm font-normal">Available Balance</p>
                                                 </div>
                                             </div>
-                                            <button class="flex items-center bg-white px-3 py-2 border btn flex-nowrap h-auto min-h-auto w-4/12">
+                                            <button class="flex items-center bg-white px-3 py-2 border btn flex-nowrap h-auto min-h-auto w-2/5 lg:w-4/12">
                                                 <span>
                                                     <img src="media/images/logout_logo.png" alt="logout logo" title="logout logo" class="w-10">
                                                 </span>
