--- a/home_page.html
+++ b/home_page.html
@@ -131,11 +131,11 @@
                                                     <p class="text-heading/50 text-sm font-normal">Available Balance</p>
                                                 </div>
                                             </div>
-                                            <button class="flex items-center bg-white px-3 py-2 border btn flex-nowrap h-auto min-h-auto w-2/5 lg:w-4/12">
+                                            <button class="flex gap-2 lg:gap-0 items-center bg-white px-3 py-2 border btn flex-nowrap h-auto min-h-auto w-auto lg:w-1/3">
                                                 <span>
-                                                    <img src="media/images/logout_logo.png" alt="logout logo" title="logout logo" class="w-10">
+                                                    <img src="media/images/logout_logo.png" alt="logout logo" title="logout logo" class="w-5 lg:w-12">
                                                 </span>
-                                                <span class="text-heading/50 text-base font-normal w-28 flex justify-end">Log Out</span>
+                                                <span class="text-heading/50 text-base font-normal lg:w-28 flex justify-end">Log Out</span>
                                             </button>
                                         </section>
 
