Welcome to payoo section complete.

--- a/home_page.html
+++ b/home_page.html
@@ -120,8 +120,11 @@
                                 <div class="hero-content flex-col lg:flex-row-reverse">
                                     <div class="card bg-base-100 w-full shrink-0">
 
-                                        <!-- Balance and logout -->
-                                        <section class="flex justify-between items-center">
+
+
+
+                                        <!-- Balance and logout section. -->
+                                        <section class="flex justify-between items-center mb-8">
                                             <div class="flex items-center gap-2">
                                                 <div class="w-1/6">
                                                     <img src="media/images/logo.png" alt="logo" title="logo">
@@ -137,6 +140,21 @@
                                                 </span>
                                                 <span class="text-heading/50 text-base font-normal lg:w-28 flex justify-end">Log Out</span>
                                             </button>
+                                        </section>
+
+
+
+
+
+                                        <!-- Welcome to payoo section. -->
+                                        <section>
+                                            <h1 class="font-bold text-2xl mb-3 text-heading">
+                                                <img src="media/images/fire.png" alt="fire_icon" title="fire_icon" class="inline">
+                                                 Welcome to Payooo!
+                                            </h1>
+                                            <p class="font-normal text-base text-heading/50">
+                                                Enjoy easy and convenient financial services with us. Cashout charge is low.
+                                            </p>
                                         </section>
 
                                     </div>
