All services sectio complete

--- a/home_page.html
+++ b/home_page.html
@@ -157,6 +157,41 @@
                                             </p>
                                         </section>
 
+
+
+
+
+
+                                        <!-- All services section. -->
+                                        <section class="my-6">
+                                            <div class="grid grid-cols-3 gap-4">
+                                                <div class="py-5 px-3 border rounded-xl border-heading/10 flex justify-center flex-col items-center">
+                                                    <img src="media/images/add_money.png" alt="add money" title="add money" class="w-10 h-10">
+                                                    <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Add Money</strong>
+                                                </div>
+                                                <div class="py-5 px-3 border rounded-xl border-heading/10 flex justify-center flex-col items-center">
+                                                    <img src="media/images/cashout.png" alt="cash out" title="cash out" class="w-10 h-10">
+                                                    <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Cashout</strong>
+                                                </div>
+                                                <div class="py-5 px-2 border rounded-xl border-heading/10 flex justify-center flex-col items-center">
+                                                    <img src="media/images/transfer_money.png" alt="transfer money" title="transfer money" class="w-10 h-10">
+                                                    <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Transfer Money</strong>
+                                                </div>
+                                                <div class="py-5 px-3 border rounded-xl border-heading/10 flex justify-center flex-col items-center">
+                                                    <img src="media/images/get_bonus.png" alt="get bonus" title="get bonus" class="w-10 h-10">
+                                                    <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Get Bonus</strong>
+                                                </div>
+                                                <div class="py-5 px-3 border rounded-xl border-heading/10 flex justify-center flex-col items-center">
+                                                    <img src="media/images/pay_bill.png" alt="pay bill" title="pay bill" class="w-10 h-10">
+                                                    <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Pay Bill</strong>
+                                                </div>
+                                                <div class="py-5 px-3 border rounded-xl border-heading/10 flex justify-center flex-col items-center">
+                                                    <img src="media/images/transactions.png" alt="transactions" title="transactions" class="w-10 h-10">
+                                                    <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Transactions</strong>
+                                                </div>
+                                            </div>
+                                        </section>
+
                                     </div>
                                 </div>
 
