Add comment in payment section and for script file

--- a/home_page.html
+++ b/home_page.html
@@ -188,7 +188,10 @@
 
 
 
-                            <!-- Payment Details and form section -->
+                            <!-- 
+                                            Payment Details and form section.
+                                =====================================================
+                            -->
                             <section class="px-8 bg-login_bg py-8">
                             
                                 <!-- heading. -->
@@ -290,6 +293,7 @@
         -->
         <footer></footer>
 
+        <!-- Login Js. -->
         <script src="js/login.js"></script>
 
         <!-- Font awesome kit. -->
