Change text in Details section.

--- a/home_page.html
+++ b/home_page.html
@@ -226,7 +226,7 @@
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
                                                 <div class="text-heading/70">
-                                                    <strong class="mb-2 text-base font-semibold">Electricity Bill</strong>
+                                                    <strong class="mb-2 text-base font-semibold">Bank Deposit</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
                                             </div>
@@ -241,7 +241,7 @@
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
                                                 <div class="text-heading/70">
-                                                    <strong class="mb-2 text-base font-semibold">Electricity Bill</strong>
+                                                    <strong class="mb-2 text-base font-semibold">Mobile Recharge</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
                                             </div>
@@ -256,7 +256,7 @@
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
                                                 <div class="text-heading/70">
-                                                    <strong class="mb-2 text-base font-semibold">Electricity Bill</strong>
+                                                    <strong class="mb-2 text-base font-semibold">Gas Bill</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
                                             </div>
