Changed div to a for set link in details div

--- a/home_page.html
+++ b/home_page.html
@@ -177,7 +177,7 @@
                                                     <strong class="text-sm font-normal text-heading/70 mt-2 text-center">Transactions</strong>
                                                 </div>
                                             </div>
-                                        </section>                                        
+                                        </section>                                     
 
                                     </div>
                                 </div>
@@ -206,7 +206,7 @@
                                     <div class="grid grid-cols-1 gap-3">
 
                                         <div class="py-4 px-3 flex justify-between items-center border rounded-xl border-heading/10 bg-white">
-                                            <div class="flex items-center gap-2">
+                                            <a href="#" class="flex items-center gap-2">
                                                 <div class="rounded-[2rem] p-3 bg-login_bg">
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
@@ -214,14 +214,14 @@
                                                     <strong class="mb-2 text-base font-semibold">Electricity Bill</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
-                                            </div>
+                                            </a>
                                             <button class="text-2xl text-heading/30">
                                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                                             </button>
                                         </div>
 
                                         <div class="py-4 px-3 flex justify-between items-center border rounded-xl border-heading/10 bg-white">
-                                            <div class="flex items-center gap-2">
+                                            <a href="#" class="flex items-center gap-2">
                                                 <div class="rounded-[2rem] p-3 bg-login_bg">
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
@@ -229,14 +229,14 @@
                                                     <strong class="mb-2 text-base font-semibold">Bank Deposit</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
-                                            </div>
+                                            </a>
                                             <button class="text-2xl text-heading/30">
                                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                                             </button>
                                         </div>
 
                                         <div class="py-4 px-3 flex justify-between items-center border rounded-xl border-heading/10 bg-white">
-                                            <div class="flex items-center gap-2">
+                                            <a href="#" class="flex items-center gap-2">
                                                 <div class="rounded-[2rem] p-3 bg-login_bg">
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
@@ -244,14 +244,14 @@
                                                     <strong class="mb-2 text-base font-semibold">Mobile Recharge</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
-                                            </div>
+                                            </a>
                                             <button class="text-2xl text-heading/30">
                                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                                             </button>
                                         </div>
 
                                         <div class="py-4 px-3 flex justify-between items-center border rounded-xl border-heading/10 bg-white">
-                                            <div class="flex items-center gap-2">
+                                            <a href="#" class="flex items-center gap-2">
                                                 <div class="rounded-[2rem] p-3 bg-login_bg">
                                                     <img src="media/images/add_money.png" alt="simple_icon" class="w-10 h-10">
                                                 </div>
@@ -259,7 +259,7 @@
                                                     <strong class="mb-2 text-base font-semibold">Gas Bill</strong>
                                                     <p class="text-xs font-normal">Today 01:44 AM</p>
                                                 </div>
-                                            </div>
+                                            </a>
                                             <button class="text-2xl text-heading/30">
                                                 <i class="fa-solid fa-ellipsis-vertical"></i>
                                             </button>
