Hide all section without add money section.

--- a/home_page.html
+++ b/home_page.html
@@ -282,7 +282,7 @@
                                                 Add money section.
                                     ========================================
                                 -->
-                                <section class="hidden">
+                                <section class="">
                                     <!-- heading. -->
                                     <div class="flex justify-between items-center">
                                         <h2 class="font-semibold text-lg text-heading/90">Add Money</h2>
@@ -459,7 +459,7 @@
                                                 Pay Bill section.
                                     ========================================
                                 -->
-                                <section>
+                                <section class="hidden">
                                     <!-- heading. -->
                                     <div class="flex justify-between items-center">
                                         <h2 class="font-semibold text-lg text-heading/90">Pay Bill</h2>
