Remove span tag in option and add click handler on add money button

--- a/home_page.html
+++ b/home_page.html
@@ -301,7 +301,7 @@
                                                     </label>
                                                     <select id="select_bank" name="banks"
                                                         class="input input-bordered rounded-[2rem] px-5 bg-input_field border-none text-heading/60">
-                                                        <option selected>Select bank <span>&#8595;</span></option>
+                                                        <option selected>Select bank &#8595;</option>
                                                         <option value="city_bank">City bank</option>
                                                         <option value="rupali_bank">Rupali bank</option>
                                                     </select>
@@ -335,7 +335,7 @@
                                                 </div>
                                     
                                                 <div class="form-control mt-6">
-                                                    <button
+                                                    <button onclick="message()" id="add_money_button"
                                                         class="btn h-auto min-h-auto btn-primary bg-button border-button text-white font-semibold text-xl rounded-[2rem] px-5 py-4">Add Money</button>
                                                 </div>
                                     
@@ -478,7 +478,7 @@
                                                     </label>
                                                     <select id="select_bank" name="banks"
                                                         class="input input-bordered rounded-[2rem] px-5 bg-input_field border-none text-heading/60">
-                                                        <option selected>Select bank <span>&#8595;</span></option>
+                                                        <option selected>Select bank &#8595;</option>
                                                         <option value="city_bank">City bank</option>
                                                         <option value="rupali_bank">Rupali bank</option>
                                                     </select>
@@ -548,6 +548,9 @@
 
         <!-- Login Js. -->
         <script src="js/login.js"></script>
+
+        <!-- Home JS. -->
+        <script src="js/home.js"></script>
 
         <!-- Font awesome kit. -->
         <script src="https://kit.fontawesome.com/1bbb5634e6.js" crossorigin="anonymous"></script>
