Set hompage link beside balance logo.

--- a/home_page.html
+++ b/home_page.html
@@ -121,9 +121,11 @@
                                         <!-- Balance and logout section. -->
                                         <section class="flex justify-between items-center mb-8">
                                             <div class="flex items-center gap-2">
-                                                <div class="w-1/6">
-                                                    <img src="media/images/logo.png" alt="logo" title="logo">
-                                                </div>
+                                                <button class="w-1/6 p-0 btn flex-nowrap bg-transparent border-none" title="Home page">
+                                                    <a href="home_page.html">
+                                                        <img src="media/images/logo.png" alt="logo" title="logo">
+                                                    </a>
+                                                </button>
                                                 <div>
                                                     <b class="font-extrabold text-lg text-heading/90">$
                                                         <span id="main_balance_amount">145000</span>
