--- a/home_page.html
+++ b/home_page.html
@@ -133,7 +133,7 @@
                                                     <p class="text-heading/50 text-sm font-normal">Available Balance</p>
                                                 </div>
                                             </div>
-                                            <button
+                                            <button id="log_out_button"
                                                 class="flex gap-2 lg:gap-0 items-center bg-white px-3 py-2 border btn flex-nowrap h-auto min-h-auto w-auto lg:w-1/3">
                                                 <span>
                                                     <img src="media/images/logout_logo.png" alt="logout logo"
