Create add_money.js file for orgaize code.

--- a/home_page.html
+++ b/home_page.html
@@ -788,6 +788,9 @@
         <!-- Features JS. -->
         <script src="js/features.js"></script>
 
+        <!-- Add Money. -->
+        <script src="js/add_money.js"></script>
+
         <!-- Font awesome kit. -->
         <script src="https://kit.fontawesome.com/1bbb5634e6.js" crossorigin="anonymous"></script>
 
